[package]
name = "dbd-winstreak-gui"
version = "0.2.1"
edition = "2021"

[dependencies]
slint = "1.12.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[build-dependencies]
slint-build = "1.12.1"

[profile.release]
#lto="fat"
#codegen-units=1
#strip=true
#panic="abort"